# fetche

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  devenv.nix  example.toml  example.txt  fetche.toml
.github/workflows/: docker-publish.yml
.sqlx/: query-0b339232bf1dd1d515fcf7bb8f60841d905eaeb44f8819e16dfc20ae39c9a126.json  query-35139bdef61d4aeb2d8d58bc8840726c53388ca4812b91361b91c5b89e069312.json  query-476062fde669b670567c19862d8e96c69ab827663385f6df05734298373594ac.json  query-49408165e812c0e2645f76adfcb2e3f135578d4b214c4892d79f193e120b8acb.json  query-7bde4b07e938b1b1f1f5a79bef768a8b2889585e17cd43175cdba7c56fb670be.json  query-995c7af8cc881e751e7c7ce18b8dbb888ee976778f1c279b9581e206db009b55.json  query-a53d62afe7df9d987faed393ea8404e10e495058de4c340500ada768a9f3b1c7.json  query-c058c3126fff418ec44f63a24d1273bc4532e59fc414064c93289a776f73fb45.json  query-d97f9cffd2c28233d40d9c0101d08f6eea294e6ff0ce20c039fd68fe9d60e935.json  query-ea64217fb03ec1479e7dce517f8d8c2cef638311d30752e192141c89c6c6af56.json
migrations/: 20241225222807_init.down.sql  20241225222807_init.up.sql
src/: db.rs  main.rs
src/api/: mod.rs
src/models/: config.rs  fetch_result.rs  mod.rs
