[package]
name = "fetche"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"]}
tokio = { version = "1.42", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jiff = { version = "0.1", features = ["serde", "std"] }
toml = "0.8"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
actix-web = "4.9"
